SERVER-81877 Use MaxTimeMsExpired in ShardRemote::_scheduleCommand if pass maxTimsMs for timeout (#39666)

GitOrigin-RevId: 2f413000ead3055a74dc8a6e4aebd047ad6bcd67